// Protocol buffer specification for evaluation of a model.

syntax = "proto2";

import "tagset/coarse_pos/coarse_tag_enum.proto";
import "tagset/dep_labels/dep_label_enum.proto";
import "tagset/fine_pos/fine_tag_enum.proto";

package model;

message Evaluation {
  // arc accuracy of the model.
  optional float arc_accuracy = 1;
  // unlabeled attachment score with this model.
  optional float uas_total = 2;
  // labeled attachment score with this model.
  optional float las_total = 3;
  // typed unlabeled attachment score with this model.
  optional TypedUas typed_uas = 4;
  // typed labeled attachment precision with this model.
  optional LabeledAttachmentPrec labeled_attachment_prec = 5;
  // typed labeled attachment recall with this model.
  optional LabeledAttachmentRecall labeled_attachment_recall = 6;
  // typed labeled attachment f1 with this model.
  optional LabeledAttachmentMetrics labeled_attachment_metrics = 7;
  // label accuracy (without heads)
  optional float label_accuracy = 8;
}

message TypedUas {
  repeated Score uas = 1;
}

// this sould be attachment_precision
message LabeledAttachmentPrec {
  repeated Score prec = 1;
}

// this should be attachment_recall
message LabeledAttachmentRecall {
  repeated Score recall = 1;
}

message Score {
  optional tagset.dep_labels.Tag label = 1;     /*actually required*/
  optional float score = 2;                     /*actually required*/
}

message LabeledAttachmentMetrics {
  repeated Metric labeled_attachment_metric = 1;
}

// in progress
message LabelPredictionMetrics {
  repeated Metric label_prediction_metric = 2;
}


message Metric {
  optional tagset.dep_labels.Tag label = 1;   /*actually required*/
  optional int32 count = 2;                   /*actually required*/
  optional float prec = 3;                    /*actually required*/
  optional float recall = 4;                  /*actually required*/
  optional float f1  = 5;                     /*actually required*/
}